force-app/main/default/objects/Super_Market__c/Super_Market__c.object-meta.xml
<CustomObject>
    <label>Super Market</label>
    <nameField>
        <label>Super Market Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Super Markets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>