force-app/main/default/objects/Super_Market__c/fields/Airline_Mag_Showcase_I__c.field-meta.xml
<CustomField>
    <fullName>Airline_Mag_Showcase_I__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airline Mag Showcase I</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Super Markets (Airline Mag Showcase I)</relationshipLabel>
    <relationshipName>Airline_Mag_Showcase_I</relationshipName>
    <type>Lookup</type>
</CustomField>