force-app/main/default/objects/Super_Market__c/fields/Airline_Mag_Showcase_I_Pub_Date__c.field-meta.xml
<CustomField>
    <fullName>Airline_Mag_Showcase_I_Pub_Date__c</fullName>
    <label>Airline Mag Showcase I Pub Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>