force-app/main/default/objects/Super_Market__c/fields/Alumni_Showcase_I__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Showcase_I__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alumni Showcase I</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Super Markets (Alumni Showcase I)</relationshipLabel>
    <relationshipName>Alumni_Showcase_I</relationshipName>
    <type>Lookup</type>
</CustomField>