force-app/main/default/objects/Super_Market__c/fields/Alumni_Showcase_I_Publication_Date__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Showcase_I_Publication_Date__c</fullName>
    <label>Alumni Showcase I Publication Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>