force-app/main/default/objects/Super_Market__c/fields/Alumni_Showcase_II__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Showcase_II__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alumni Showcase II</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Super Markets (Alumni Showcase II)</relationshipLabel>
    <relationshipName>Alumni_Showcase_II</relationshipName>
    <type>Lookup</type>
</CustomField>