force-app/main/default/objects/Super_Market__c/fields/BFF_Showcase__c.field-meta.xml
<CustomField>
    <fullName>BFF_Showcase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BFF Showcase</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Super Markets (BFF Showcase)</relationshipLabel>
    <relationshipName>BFF_Showcase</relationshipName>
    <type>Lookup</type>
</CustomField>