force-app/main/default/objects/Super_Market__c/fields/BFF_Showcase_Publication_Date__c.field-meta.xml
<CustomField>
    <fullName>BFF_Showcase_Publication_Date__c</fullName>
    <label>BFF Showcase Publication Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>