force-app/main/default/objects/Super_Market__c/fields/Core_Market_Project__c.field-meta.xml
<CustomField>
    <fullName>Core_Market_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Core Market Project</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Super Markets</relationshipLabel>
    <relationshipName>Super_Markets</relationshipName>
    <type>Lookup</type>
</CustomField>