force-app/main/default/objects/Super_Market__c/fields/Digital_Showcase_I__c.field-meta.xml
<CustomField>
    <fullName>Digital_Showcase_I__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Digital Showcase I</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Super Markets (Digital Showcase I)</relationshipLabel>
    <relationshipName>Digital_Showcase_I</relationshipName>
    <type>Lookup</type>
</CustomField>