force-app/main/default/objects/Super_Market__c/fields/Digital_Showcase_II__c.field-meta.xml
<CustomField>
    <fullName>Digital_Showcase_II__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Digital Showcase II</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Super Markets (Digital Showcase II)</relationshipLabel>
    <relationshipName>Digital_Showcase_II</relationshipName>
    <type>Lookup</type>
</CustomField>