force-app/main/default/objects/Super_Market__c/fields/Digital_Showcase_II_Publication_Date__c.field-meta.xml
<CustomField>
    <fullName>Digital_Showcase_II_Publication_Date__c</fullName>
    <label>Digital Showcase II Publication Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>