force-app/main/default/objects/Super_Market__c/fields/Forbes_Investment_Guide_I__c.field-meta.xml
<CustomField>
    <fullName>Forbes_Investment_Guide_I__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forbes Investment Guide I</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Super Markets (Forbes Investment Guide I)</relationshipLabel>
    <relationshipName>Forbes_Investment_Guide_I</relationshipName>
    <type>Lookup</type>
</CustomField>