force-app/main/default/objects/Super_Market__c/fields/Forbes_Investment_Guide_I_Date__c.field-meta.xml
<CustomField>
    <fullName>Forbes_Investment_Guide_I_Date__c</fullName>
    <label>Forbes Investment Guide I Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>