force-app/main/default/objects/Super_Market__c/fields/Forbes_Investment_Guide_II__c.field-meta.xml
<CustomField>
    <fullName>Forbes_Investment_Guide_II__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forbes Investment Guide II</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Super Markets (Forbes Investment Guide II)</relationshipLabel>
    <relationshipName>Forbes_Investment_Guide_II</relationshipName>
    <type>Lookup</type>
</CustomField>