force-app/main/default/objects/Super_Market__c/fields/Other_Alt_Media_I__c.field-meta.xml
<CustomField>
    <fullName>Other_Alt_Media_I__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Alt Media I</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Super Markets (Other Alt Media I)</relationshipLabel>
    <relationshipName>Other_Alt_Media_I</relationshipName>
    <type>Lookup</type>
</CustomField>