force-app/main/default/objects/Super_Market__c/fields/Other_Alt_Media_I_Pub_Date__c.field-meta.xml
<CustomField>
    <fullName>Other_Alt_Media_I_Pub_Date__c</fullName>
    <label>Other Alt Media I Pub Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>