force-app/main/default/objects/Super_Market__c/fields/Other_Alt_Media_II__c.field-meta.xml
<CustomField>
    <fullName>Other_Alt_Media_II__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Alt Media II</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Super Markets (Other Alt Media II)</relationshipLabel>
    <relationshipName>Other_Alt_Media_II</relationshipName>
    <type>Lookup</type>
</CustomField>