force-app/main/default/objects/Super_Market__c/fields/Relocation_Guide_I__c.field-meta.xml
<CustomField>
    <fullName>Relocation_Guide_I__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relocation Guide I</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Super Markets (Relocation Guide I)</relationshipLabel>
    <relationshipName>Relocation_Guide_I</relationshipName>
    <type>Lookup</type>
</CustomField>