force-app/main/default/objects/Super_Market__c/fields/Relocation_Guide_II__c.field-meta.xml
<CustomField>
    <fullName>Relocation_Guide_II__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relocation Guide II</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Super Markets (Relocation Guide II)</relationshipLabel>
    <relationshipName>Relocation_Guide_II</relationshipName>
    <type>Lookup</type>
</CustomField>