force-app/main/default/objects/Super_Market__c/fields/Relocation_Guide_II_Pub_Date__c.field-meta.xml
<CustomField>
    <fullName>Relocation_Guide_II_Pub_Date__c</fullName>
    <label>Relocation Guide II Pub Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>