force-app/main/default/objects/Super_Market__c/fields/WiW_WSJ_Showcase_I__c.field-meta.xml
<CustomField>
    <fullName>WiW_WSJ_Showcase_I__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WiW WSJ Showcase I</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Super Markets (WiW WSJ Showcase I)</relationshipLabel>
    <relationshipName>WiW_WSJ_Showcase_I</relationshipName>
    <type>Lookup</type>
</CustomField>