force-app/main/default/objects/Super_Market__c/fields/WiW_WSJ_Showcase_II__c.field-meta.xml
<CustomField>
    <fullName>WiW_WSJ_Showcase_II__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WiW WSJ Showcase II</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Super Markets (WiW WSJ Showcase II)</relationshipLabel>
    <relationshipName>WiW_WSJ_Showcase_II</relationshipName>
    <type>Lookup</type>
</CustomField>