force-app/main/default/objects/Super_Market__c/fields/WSJ_Showcase_I__c.field-meta.xml
<CustomField>
    <fullName>WSJ_Showcase_I__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WSJ Showcase I</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Super Markets (WSJ Showcase I)</relationshipLabel>
    <relationshipName>Super_Markets2</relationshipName>
    <type>Lookup</type>
</CustomField>