force-app/main/default/objects/Super_Market__c/fields/WSJ_Showcase_I_Publication_Date__c.field-meta.xml
<CustomField>
    <fullName>WSJ_Showcase_I_Publication_Date__c</fullName>
    <label>WSJ Showcase I Publication Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>