force-app/main/default/objects/Super_Market__c/fields/WSJ_Showcase_II__c.field-meta.xml
<CustomField>
    <fullName>WSJ_Showcase_II__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WSJ Showcase II</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Super Markets (WSJ Showcase II)</relationshipLabel>
    <relationshipName>WSJ_Showcase_II</relationshipName>
    <type>Lookup</type>
</CustomField>